Add support to libby.